NOINLINE in VideoCaptureOracle::IsFrameInRecentHistory to address issue 723090

Inlining was the issue, tested @ https://codereview.chromium.org/2890783002/
with (PS3) and without (PS2) this change. Only compiles with.

BUG=723090

Review-Url: https://codereview.chromium.org/2888783004
Cr-Commit-Position: refs/heads/master@{#472663}

Former-commit-id: 2a81129250714241687f3a8f51fb0915aa4f1a6f